--- a/dollar-docs/src/main/webapp/_config.yml
+++ b/dollar-docs/src/main/webapp/_config.yml
@@ -4,7 +4,7 @@ email: hello@neilellis.me
 description: > # this means to ignore newlines until "baseurl:"
   DollarScript and the DollarAPI - getting things done on the JVM.
 baseurl: "/dollar/" # the subpath of your site, e.g. /blog/
-url: "http://neilellis.github.io/"
+url: "http://sillelien.github.io/"
 twitter_username: neilellis
 github_username:  sillelien
 
