--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -190,7 +190,7 @@ jobs:
               cd docs
               git checkout gh-pages
               cp -rf $HOME/dollar/dist/devdocs dev
-              envsubst < $HOME/dollar/dollar-docs/src/main/webapp/_env.yml > $HOME/dollar/dollar-docs/src/main/webapp/env.yml
+              echo $(cat $HOME/dollar/dollar-docs/src/main/webapp/_env.yml) > $HOME/dollar/dollar-docs/src/main/webapp/env.yml
               tail -n +2 $HOME/dollar/dollar-docs/src/main/resources/pages/scripting.md  > $HOME/dollar/dollar-docs/src/main/webapp/scripting.md
               jekyll build --source /srv/jekyll/project/dollar-docs/src/main/webapp/ --destination /srv/jekyll/dist/docs
               git add *
