--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -152,7 +152,7 @@ jobs:
         - persist_to_workspace:
             root: .
             paths:
-              - dist/devdocs
+              - dist
 
         - save_cache:
             key: m2-devdocs-{{ .Branch }}-{{ checksum "pom.xml" }}
@@ -177,7 +177,7 @@ jobs:
         - checkout
 
         - attach_workspace:
-            at: dist/devdocs
+            at: /root/dist
 
         - run:
             name: build-docs
@@ -212,7 +212,7 @@ jobs:
         - checkout
 
         - attach_workspace:
-            at: dist/devdocs
+            at: dist
 
         - restore_cache:
             keys:
