--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,7 @@ jobs:
 
         - run:
             name: test
-            command: ./build.sh
+            command: bin/build.sh
             no_output_timeout: 600
 
         - store_test_results:
@@ -81,7 +81,7 @@ jobs:
 
         - run:
             name: deploy
-            command: ./deploy-maven.sh
+            command: bin/deploy-maven.sh
 
         - save_cache:
             key: m2-deploy{{ .Branch }}-{{ checksum "pom.xml" }}
@@ -234,18 +234,18 @@ jobs:
 
         - run:
             name: build-dist
-            command: ./build-dist.sh
+            command: bin/build-dist.sh
 
         - run:
             name: test-dist
             command: |
               git config --global --unset url."ssh://git@github.com".insteadOf "https://github.com" || true
-              ./test-dist.sh
+              bin/test-dist.sh
               git config --global url."ssh://git@github.com".insteadOf "https://github.com" || true
 
         - run:
             name: deploy-dist
-            command: ./deploy-dist.sh
+            command: bin/deploy-dist.sh
 
         - save_cache:
             key: m2-dist-{{ .Branch }}-{{ checksum "pom.xml" }}
@@ -276,15 +276,15 @@ jobs:
 
         - run:
             name: build
-            command:  ./build-docker.sh
+            command:  bin/build-docker.sh
 
         - run:
             name: test
-            command:  "./test-docker.sh || :"
+            command:  "bin/test-docker.sh || :"
 
         - run:
             name: deploy
-            command:  ./deploy-docker.sh
+            command:  bin/deploy-docker.sh
 
 
 
