--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,7 @@ jobs:
         - restore_cache:
             keys:
               - m2-{{ .Branch }}-{{ checksum "pom.xml" }}
+              - m2-{{ .Branch }}
               - m2
 
         - run:
@@ -89,6 +90,20 @@ jobs:
             paths:
                 - ~/.m2
 
+        - save_cache:
+            key: m2-{{ .Branch }}-{{ checksum "pom.xml" }}
+            paths:
+                - ~/.m2
+
+        - save_cache:
+            key: m2-{{ .Branch }}
+            paths:
+                - ~/.m2
+
+        - save_cache:
+            key: m2
+            paths:
+                - ~/.m2
 
 #    docs:
 #      <<: *defaults
@@ -218,7 +233,6 @@ jobs:
         - restore_cache:
             keys:
                 - m2-dist-{{ .Branch }}-{{ checksum "pom.xml" }}
-                - m2-devdocs-{{ .Branch }}-{{ checksum "pom.xml" }}
                 - m2-{{ .Branch }}-{{ checksum "pom.xml" }}
                 - m2-{{ .Branch }}
                 - m2
@@ -250,6 +264,11 @@ jobs:
 
         - save_cache:
             key: m2-dist-{{ .Branch }}-{{ checksum "pom.xml" }}
+            paths:
+                - ~/.m2
+
+        - save_cache:
+            key: m2-dist-{{ .Branch }}
             paths:
                 - ~/.m2
 
