--- a/pom.xml
+++ b/pom.xml
@@ -87,8 +87,20 @@
             <dependency>
                 <groupId>com.sillelien</groupId>
                 <artifactId>dollar-core</artifactId>
-                <version>0.3.324</version>
+                <version>0.3.327</version>
             </dependency>
+            <dependency>
+                <groupId>com.github.oxo42</groupId>
+                <artifactId>stateless4j</artifactId>
+                <scope>compile</scope>
+                <exclusions>
+                    <exclusion>
+                        <artifactId>slf4j-jdk14</artifactId>
+                        <groupId>org.slf4j</groupId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+
             <dependency>
                 <groupId>com.sillelien</groupId>
                 <artifactId>github-api</artifactId>
