--- a/pom.xml
+++ b/pom.xml
@@ -87,12 +87,12 @@
             <dependency>
                 <groupId>com.sillelien</groupId>
                 <artifactId>dollar-core</artifactId>
-                <version>0.3.327</version>
+                <version>0.3.331</version>
             </dependency>
             <dependency>
                 <groupId>com.github.oxo42</groupId>
                 <artifactId>stateless4j</artifactId>
-                <scope>compile</scope>
+                <scope>runtime</scope>
                 <exclusions>
                     <exclusion>
                         <artifactId>slf4j-jdk14</artifactId>
