Work on new scope system.

--- a/dollar-examples/pom.xml
+++ b/dollar-examples/pom.xml
@@ -64,6 +64,11 @@
         </dependency>
         <dependency>
             <groupId>com.sillelien</groupId>
+            <artifactId>dollar-simple-execution-plugin</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sillelien</groupId>
             <artifactId>dollar-socketio-plugin</artifactId>
             <version>${project.version}</version>
         </dependency>
