--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -209,7 +209,7 @@ jobs:
               cp -rf /root/workspace/devdocs dev
               mkdir -p /srv/jekyll/project/dollar-docs/src/main/webapp/_includes/
               cp -rf /root/workspace/gendocs/* /srv/jekyll/project/dollar-docs/src/main/webapp/_includes/
-              echo "release: $(cat .release)" > /srv/jekyll/project/dollar-docs/src/main/webapp/env.yml
+              echo "release: $(cat /srv/jekyll/project/.release)" > /srv/jekyll/project/dollar-docs/src/main/webapp/env.yml
               tail -n +2 /srv/jekyll/project/dollar-docs/src/main/resources/pages/scripting.md  >
               /srv/jekyll/project/dollar-docs/src/main/webapp/scripting.md
               jekyll build --source /srv/jekyll/project/dollar-docs/src/main/webapp/ --destination /srv/jekyll/dist/docs
