--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -201,8 +201,8 @@ jobs:
               cd project
               git checkout $CIRCLE_BRANCH
               cd ..
-              mkdir -p workspace
-              cd workspace
+              mkdir -p dist
+              cd dist
               git clone https://github.com/sillelien/dollar docs
               cd docs
               git checkout gh-pages
@@ -210,8 +210,8 @@ jobs:
               mkdir -p _includes
               echo "release: $(cat /srv/jekyll/project/.release)" > /srv/jekyll/project/dollar-docs/src/main/webapp/env.yml
               tail -n +2 /srv/jekyll/project/dollar-docs/src/main/resources/pages/scripting.md  > /srv/jekyll/project/dollar-docs/src/main/webapp/manual.md
-              jekyll build --source /srv/jekyll/project/dollar-docs/src/main/webapp/ --destination /srv/jekyll/workspace/docs
-              cat  /root/workspace/gendocs/symbols.md >> /srv/jekyll/project/dollar-docs/src/main/webapp/manual.md
+              jekyll build --source /srv/jekyll/project/dollar-docs/src/main/webapp/ --destination /srv/jekyll/dist/docs
+              cat  /root/workspace/gendocs/symbols.md >> /srv/jekyll/dist/docs/manual.md
               git add *
               git commit -a -m "Updated docs from build [ci skip]"  || :
               git push || :
