--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -211,7 +211,8 @@ jobs:
               cp -rf /root/workspace/devdocs dev
               mkdir -p _includes
               echo "release: $(cat /srv/jekyll/project/.release)" > /srv/jekyll/project/dollar-docs/src/main/webapp/env.yml
-              jekyll build --source /srv/jekyll/project/dollar-docs/src/main/webapp/ --destination /srv/jekyll/dist/docs
+              rm -rf /srv/jekyll/dist/docs/*
+              cp -rf  /srv/jekyll/project/dollar-docs/src/main/webapp/* /srv/jekyll/dist/docs
               tail -n +2 /srv/jekyll/project/dollar-docs/src/main/resources/pages/scripting.md > manual.md
               cat  /root/workspace/gendocs/symbols.md >> manual.md
               git add *
