New Jekyll work

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -206,8 +206,8 @@ jobs:
               rm -rf dev || :
               cp -rf /root/workspace/devdocs dev
               git add dev
-              echo "release: $(cat /srv/jekyll/project/.release)" > env.yml
-              echo "---">  _pages/manual.md
+              echo "release: $(cat /srv/jekyll/project/.release)" >> config.yml
+              echo "---" >  _pages/manual.md
               echo "layout: splash" >>_pages/manual.md
               echo "title:  \"Dollar Scripting Language Manual\"" >> _pages/manual.md
               echo "permalink: /manual/" >> _pages/manual.md
