--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -212,7 +212,8 @@ jobs:
               echo "title:  \"Dollar Scripting Language Manual\"" >> _pages/manual.md
               echo "permalink: /manual/" >> _pages/manual.md
               echo "---" >>_pages/manual.md
-              tail -n +2 /srv/jekyll/project/dollar-docs/src/main/resources/pages/manual.md >> _pages/manual.md
+              tail -n +2 /srv/jekyll/project/dollar-docs/src/main/resources/pages/manual.md | sed -E "s/```dollar/```/">>
+              _pages/manual.md
               cat  /root/workspace/gendocs/symbols.md >> manual.md
               git commit -a -m "Updated docs from build [ci skip]"  || :
               git push || :
