--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -183,14 +183,13 @@ jobs:
 
     docs:
       <<: *defaults
-      docker:
-        - image: sillelien/circleci-jekyll-build-image
 
       steps:
+
         - checkout
 
         - attach_workspace:
-            at: /root/workspace
+            at: /home/circleci/workspace
 
         - run:
             name: build-docs
@@ -198,13 +197,9 @@ jobs:
               set -ex
               git config --global user.email "hello@neilellis.me"
               git config --global user.name "Neil Ellis"
-              cd /srv/jekyll
-              git clone https://github.com/sillelien/dollar project
-              cd project
-              git checkout $CIRCLE_BRANCH
               cd docs
               rm -rf dev || :
-              cp -rf /root/workspace/devdocs dev
+              cp -rf /home/circleci/workspace/devdocs dev
               git add dev
               echo "release: $(cat /srv/jekyll/project/.release)" >> config.yml
               echo "---" >  _pages/manual.md
@@ -212,14 +207,16 @@ jobs:
               echo "title:  \"Dollar Scripting Language Manual\"" >> _pages/manual.md
               echo "permalink: /manual/" >> _pages/manual.md
               echo "---" >>_pages/manual.md
-              tail -n +2 /srv/jekyll/project/dollar-docs/src/main/resources/pages/manual.md | sed -E "s/```dollar/```/">>
+              tail -n +2 /home/circleci/dollar/dollar-docs/src/main/resources/pages/manual.md | sed -E "s/```dollar/```/">>
               _pages/manual.md
-              cat  /root/workspace/gendocs/symbols.md >> manual.md
+              cat  /home/circleci/workspace/gendocs/symbols.md >> manual.md
               git commit -a -m "Updated docs from build [ci skip]"  || :
               git push || :
               cd /srv/jekyll
+
         - store_artifacts:
-            path: /srv/jekyll/dist/docs
+            path: /home/circleci/dollar/docs
+
     dist:
       <<: *defaults
 
