New Jekyll work

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -207,8 +207,7 @@ jobs:
               echo "title:  \"Dollar Scripting Language Manual\"" >> _pages/manual.md
               echo "permalink: /manual/" >> _pages/manual.md
               echo "---" >>_pages/manual.md
-              tail -n +2 /home/circleci/dollar/dollar-docs/src/main/resources/pages/manual.md | sed -E "s/```dollar/```/">>
-              _pages/manual.md
+              tail -n +2 /home/circleci/dollar/dollar-docs/src/main/resources/pages/manual.md | sed -E "s/```dollar/```/" >> _pages/manual.md
               cat  /home/circleci/workspace/gendocs/symbols.md >> manual.md
               git commit -a -m "Updated docs from build [ci skip]"  || :
               git push || :
