New Jekyll work

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -208,7 +208,7 @@ jobs:
               echo "permalink: /manual/" >> _pages/manual.md
               echo "---" >>_pages/manual.md
               tail -n +2 /home/circleci/dollar/dollar-docs/src/main/resources/pages/manual.md | sed -E "s/```dollar/```/" >> _pages/manual.md
-              cat  /home/circleci/workspace/gendocs/symbols.md >> manual.md
+              cat  /home/circleci/workspace/gendocs/symbols.md >> _pages/manual.md
               git commit -a -m "Updated docs from build [ci skip]"  || :
               git push || :
               cd /srv/jekyll
