--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -212,10 +212,16 @@ jobs:
               cat  /home/circleci/workspace/gendocs/symbols.md >> _pages/manual.md
               git commit -a -m "Updated docs from build [ci skip]"  || :
               git push || :
+              cd ..
+              cp -rf docs /home/circleci/workspace/docs
 
         - store_artifacts:
-            path: /home/circleci/dollar/docs
+            path: /home/circleci/workspace/docs
 
+        - persist_to_workspace:
+            root: /home/circleci/workspace
+            paths:
+              - docs
 
     docs-preflight:
       <<: *defaults
@@ -226,25 +232,17 @@ jobs:
       steps:
 
         - attach_workspace:
-          at: /root/workspace
-
-        - checkout
+          at: /srv/jekyll/workspace
 
         - run:
             name: build-docs
             command: |
               set -ex
-              git config --global user.email "hello@neilellis.me"
-              git config --global user.name "Neil Ellis"
-              cd /srv/jekyll
-              git clone https://github.com/sillelien/dollar project
-              cd project
-              git checkout $CIRCLE_BRANCH
-              cd docs
+              cd /srv/jekyll/workspace/docs
               jekyll build
 
         - store_artifacts:
-            path: /srv/jekyll/project/docs/_site
+            path: /srv/jekyll/workspace/docs/_site
 
 
 
