--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -211,9 +211,9 @@ jobs:
               tail -n +2 /home/circleci/dollar/dollar-docs/src/main/resources/pages/manual.md | sed -E "s/\`\`\`dollar/\`\`\`/" >> _pages/manual.md
               cat  /home/circleci/workspace/gendocs/symbols.md >> _pages/manual.md
               git commit -a -m "Updated docs from build [ci skip]"  || :
-              git push || :
+              git push
               cd ..
-              cp -rf docs /home/circleci/workspace/docs
+              cp -rf /home/circleci/dollar/docs /home/circleci/workspace/docs
 
         - store_artifacts:
             path: /home/circleci/workspace/docs
@@ -239,6 +239,7 @@ jobs:
             command: |
               set -ex
               cd /srv/jekyll/workspace/docs
+              ls -l
               jekyll build
 
         - store_artifacts:
