--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -240,10 +240,10 @@ jobs:
               set -ex
               cd /srv/jekyll/workspace/docs
               ls -l
-              bundle exec jekyll build
+              bundle exec jekyll build --source /srv/jekyll/workspace/docs/ --destination /srv/jekyll/workspace/docs-built/
 
         - store_artifacts:
-            path: /srv/jekyll/workspace/docs/_site
+            path: /srv/jekyll/workspace/docs-built/
 
 
 
