--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -241,6 +241,8 @@ jobs:
               cd /srv/jekyll/workspace/docs
               ls -l
               bundle install
+              sudo chmod -R 777 /srv/jekyll/workspace/docs/
+              mkdir -p /srv/jekyll/workspace/docs-built/
               bundle exec jekyll build --source /srv/jekyll/workspace/docs/ --destination /srv/jekyll/workspace/docs-built/
 
         - store_artifacts:
